--- a/05-Visualizing linear relationships.tex
+++ b/05-Visualizing linear relationships.tex
@@ -1,6 +1,6 @@
 Visualizing linear relationships
 Many datasets contain multiple quantitative variables, and the goal of an analysis is often to relate those variables to each other. We previously discussed functions that can accomplish this by showing the joint distribution of two variables. It can be very helpful, though, to use statistical models to estimate a simple relationship between two noisy sets of observations. The functions discussed in this chapter will do so through the common framework of linear regression.
-
+%=========================================%
 In the spirit of Tukey, the regression plots in seaborn are primarily intended to add a visual guide that helps to emphasize patterns in a dataset during exploratory data analyses. That is to say that seaborn is not itself a package for statistical analysis. To obtain quantitative measures related to the fit of regression models, you should use statsmodels. The goal of seaborn, however, is to make exploring a dataset through visualization quick and easy, as doing so is just as (if not more) important than exploring a dataset through tables of statistics.
 
 %matplotlib inline
@@ -12,7 +12,8 @@ import seaborn as sns
 sns.set(color_codes=True)
 np.random.seed(sum(map(ord, "regression")))
 tips = sns.load_dataset("tips")
-Functions to draw linear regression models
+%========================================================%
+\subsection{Functions to draw linear regression models}
 Two main functions in seaborn are used to visualize a linear relationship as determined through regression. These functions, regplot() and lmplot() are closely related, and share much of their core functionality. It is important to understand the ways they differ, however, so that you can quickly choose the correct tool for particular job.
 
 In the simplest invocation, both functions draw a scatterplot of two variables, x and y, and then fit the regression model y ~ x and plot the resulting regression line and a 95% confidence interval for that regression:
@@ -21,6 +22,7 @@ sns.regplot(x="total_bill", y="tip", data=tips);
 ../_images/regression_9_0.png
 sns.lmplot(x="total_bill", y="tip", data=tips);
 ../_images/regression_10_0.png
+%========================================================%
 You should note that the resulting plots are identical, except that the figure shapes are different. We will explain why this is shortly. For now, the other main difference to know about is that regplot() accepts the x and y variables in a variety of formats including simple numpy arrays, pandas Series objects, or as references to variables in a pandas DataFrame object passed to data. In contrast, lmplot() has data as a required parameter and the x and y variables must be specified as strings. This data format is called “long-form” or “tidy” data. Other than this input flexibility, regplot() possesses a subset of lmplot()‘s features, so we will demonstrate them using the latter.
 
 It’s possible to fit a linear regression when one of the variables takes discrete values, however, the simple scatterplot produced by this kind of dataset is often not optimal:
@@ -35,7 +37,7 @@ A second option is to collapse over the observations in each discrete bin to plo
 
 sns.lmplot(x="size", y="tip", data=tips, x_estimator=np.mean);
 ../_images/regression_16_0.png
-Fitting different kinds of models
+\section{Fitting different kinds of models}
 The simple linear regression model used above is very simple to fit, however, it is not appropriate for some kinds of datasets. The Anscombe’s quartet dataset shows a few examples where simple linear regression provides an identical estimate of a relationship where simple visual inspection clearly shows differences. For example, in the first case, the linear regression is a good model:
 
 anscombe = sns.load_dataset("anscombe")
@@ -73,9 +75,14 @@ The solution in this case is to fit a logistic regression, such that the regress
 sns.lmplot(x="total_bill", y="big_tip", data=tips,
            logistic=True, y_jitter=.03);
 ../_images/regression_31_0.png
+%==========================================================================%
 Note that the logistic regression estimate is considerably more computationally intensive (this is true of robust regression as well) than simple regression, and as the confidence interval around the regression line is computed using a bootstrap procedure, you may wish to turn this off for faster iteration (using ci=False).
 
 An altogether different approach is to fit a nonparametric regression using a lowess smoother. This approach has the fewest assumptions, although it is computationally intensive and so currently confidence intervals are not computed at all:
+
+\end{frame}
+%==============================================%
+\begin{frame}[fragile]
 
 sns.lmplot(x="total_bill", y="tip", data=tips,
            lowess=True);
@@ -90,8 +97,15 @@ If there is structure in the residuals, it suggests that simple linear regressio
 sns.residplot(x="x", y="y", data=anscombe.query("dataset == 'II'"),
               scatter_kws={"s": 80});
 ../_images/regression_37_0.png
-Conditioning on other variables
+\end{frame}
+%============================================================%
+\section{Conditioning on other variables}
+\begin{frame}
 The plots above show many ways to explore the relationship between a pair of variables. Often, however, a more interesting question is “how does the relationship between these two variables change as a function of a third variable?” This is where the difference between regplot() and lmplot() appears. While regplot() always shows a single relationsihp, lmplot() combines regplot() with FacetGrid to provide an easy interface to show a linear regression on “faceted” plots that allow you to explore interactions with up to three additional categorical variables.
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+\large
 
 The best way to separate out a relationship is to plot both levels on the same axes and to use color to distinguish them:
 
@@ -109,11 +123,17 @@ sns.lmplot(x="total_bill", y="tip", hue="smoker", col="time", data=tips);
 sns.lmplot(x="total_bill", y="tip", hue="smoker",
            col="time", row="sex", data=tips);
 ../_images/regression_44_0.png
-Controlling the size and shape of the plot
+\end{frame}
+%=============================================================%
+\section{Controlling the size and shape of the plot}
 Before we noted that the default plots made by regplot() and lmplot() look the same but on axes that have a different size and shape. This is because func:regplot is an “axes-level” function draws onto a specific axes. This means that you can make mutli-panel figures yourself and control exactly where the the regression plot goes. If no axes is provided, it simply uses the “currently active” axes, which is why the default plot has the same size and shape as most other matplotlib functions. To control the size, you need to create a figure object yourself.
 
+\begin{framed}
+\begin{verbatim}
 f, ax = plt.subplots(figsize=(5, 6))
 sns.regplot(x="total_bill", y="tip", data=tips, ax=ax);
+\end{verbatim}
+\end{framed}
 ../_images/regression_46_0.png
 In contrast, the size and shape of the lmplot() figure is controlled through the FacetGrid interface using the size and aspect parameters, which apply to each facet in the plot, not to the overall figure itself:
 
@@ -123,11 +143,14 @@ sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
 sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
            aspect=.5);
 ../_images/regression_49_0.png
-Plotting a regression in other contexts
+%============================================================%
+\section{Plotting a regression in other contexts}
 A few other seaborn functions use regplot() in the context of a larger, more complex plot. The first is the jointplot() function that we introduced in the distributions tutorial. In addition to the plot styles previously discussed, jointplot() can use regplot() to show the linear regression fit on the joint axes by passing kind="reg":
 
 sns.jointplot(x="total_bill", y="tip", data=tips, kind="reg");
 ../_images/regression_51_0.png
+%===========================================================%
+\begin{frame}
 Using the pairplot() function with kind="reg" combines regplot() and PairGrid to show the linear relationship between variables in a dataset. Take care to note how this is different from lmplot(). In the figure below, the two axes don’t show the same relationship conditioned on two levels of a third variable; rather, PairGrid() is used to show multiple relationships between different pairings of the variables in a dataset:
 
 sns.pairplot(tips, x_vars=["total_bill", "size"], y_vars=["tip"],
@@ -138,3 +161,6 @@ Like lmplot(), but unlike jointplot(), conditioning on an additional categorical
 sns.pairplot(tips, x_vars=["total_bill", "size"], y_vars=["tip"],
              hue="smoker", size=5, aspect=.8, kind="reg");
 ../_images/regression_55_0.png
+
+\end{frame}
+\end{document}
