--- a/06-Plotting with categorical data.tex
+++ b/06-Plotting with categorical data.tex
@@ -6,8 +6,15 @@
 
 Plotting with categorical data
 We previously learned how to use scatterplots and regression model fits to visualize the relationship between two variables and how it changes across levels of additional categorical variables. However, what if one of the main variables you are interested in is categorical? In this case, the scatterplot and regression model approach won’t work. There are several options, however, for visualizing such a relationship, which we will discuss in this tutorial.
-
+\end{frame}
+%===================================%
+\begin{frame}[fragile]
+\large
 It’s useful to divide seaborn’s categorical plots into two groups: those that show the full distribution of observations within each level of the categorical variable, and those that apply a statistical estimation to show a measure of central tendency and confidence interval. The former includes the functions stripplot(), boxplot(), and violinplot(), while the latter includes the functions barplot(), countplot(), and pointplot(). These functions all share a basic API for how they accept data, although each has specific parameters that control the particulars of the visualization that is applied to that data.
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
 
 Much like the relationship between regplot() and lmplot(), in seaborn there are both relatively low-level and relatively high-level approaches for making categorical plots. The functions named above are all low-level in that they plot onto a specific matplotlib axes. There is also the higher-level factorplot(), which combines these functions with a FacetGrid to apply a categorical plot across a grid of figure panels.
 
@@ -29,6 +36,11 @@ np.random.seed(sum(map(ord, "categorical")))
 titanic = sns.load_dataset("titanic")
 tips = sns.load_dataset("tips")
 iris = sns.load_dataset("iris")
+\end{frame}
+%====================================%
+\section{Distributions of observations within categories}
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
 Distributions of observations within categories
 The first set of functions shows the full distribution of the quantitative variable within each level of the categorical variable(s). These generalize some of the approaches we discussed in the chapter to the case where we want to quickly compare across several distributions.
 \end{frame}
@@ -42,12 +54,22 @@ A simple way to show the distribution of some quantitative variable across the l
 
 sns.stripplot(x="day", y="total_bill", data=tips);
 ../_images/categorical_9_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 It’s also possible to add a nested categorical variable with the hue paramater. Above the color and position on the categorical axis are redundent, but now each provides information about one of the two variables:
 
 sns.stripplot(x="day", y="total_bill", hue="time", data=tips);
 ../_images/categorical_11_0.png
 sns.stripplot(x="size", y="total_bill", data=tips.sort("size"));
 ../_images/categorical_13_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 With these plots, it’s often helpful to put the categorical variable on the vertical axis (this is particularly useful when the category names are relatively long or there are many categories):
 
 sns.stripplot(x="total_bill", y="day", hue="time", data=tips);
@@ -75,12 +97,21 @@ A different approach is a violinplot(), which combines a boxplot with the kernel
 
 sns.violinplot(x="total_bill", y="day", hue="time", data=tips);
 ../_images/categorical_19_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 This approach uses the kernel density estimate to provide a better description of the distribution of values. Additionally, the quartile and whikser values from the boxplot are shown inside the violin. Because the violinplot uses a KDE, there are some other parameters that may need tweaking, adding some complexity relative to the straightforward boxplot:
 
 sns.violinplot(x="total_bill", y="day", hue="time", data=tips,
                bw=.1, scale="count", scale_hue=False);
 ../_images/categorical_21_0.png
-It’s also possible to “split” the violins when the hue parameter has only two levels, which can allow for a more efficient use of space:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\largeIt’s also possible to “split” the violins when the hue parameter has only two levels, which can allow for a more efficient use of space:
 
 sns.violinplot(x="day", y="total_bill", hue="sex", data=tips, split=True);
 ../_images/categorical_23_0.png
