--- a/07-Plotting on data-aware grids.tex
+++ b/07-Plotting on data-aware grids.tex
@@ -1,11 +1,23 @@
 
 Plotting on data-aware grids
 When exploring medium-dimensional data, a useful approach is to draw multiple instances of the same plot on different subsets of your dataset. This technique is sometimes called either “lattice”, or “trellis” plotting, and it is related to the idea of “small multiples”. It allows a viewer to quickly extract a large amount of information about complex data. Matplotlib offers good support for making figures with multiple axes; seaborn builds on top of this to directly link the structure of the plot to the structure of your dataset.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 To use these features, your data has to be in a Pandas DataFrame and it must take the form of what Hadley Whickam calls “tidy” data. In brief, that means your dataframe should be structured such that each column is a variable and each row is an observation.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 For advanced use, you can use the objects discussed in this part of the tutorial directly, which will provide maximum flexibility. Some seaborn functions (such as lmplot(), factorplot(), and pairplot()) also use them behind the scenes. Unlike other seaborn functions that are “Axes-level” and draw onto specific (possibly already-existing) matplotlib Axes without otherwise manipulating the figure, these higher-level functions create a figure when called and are generally more strict about how it gets set up. In some cases, arguments either to those functions or to the constructor of the class they rely on will provide a different interface attributes like the figure size, as in the case of lmplot() where you can set the height and aspect ratio for each facet rather than the overall size of the figure. Any function that uses one of these objects will always return it after plotting, though, and most of these objects have convenience methods for changing how the plot, often in a more abstract and easy way.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 %matplotlib inline
 import numpy as np
 import pandas as pd
@@ -23,7 +35,11 @@ np.random.seed(sum(map(ord, "axis_grids")))
 
 Subsetting data with FacetGrid
 The FacetGrid class is useful when you want to visualize the distribution of a variable or the relationship between multiple variables separately within subsets of your dataset. A FacetGrid can be drawn with up to three dimensions: row, col, and hue. The first two have obvious correspondence with the resulting array of axes; think of the hue variable as a third dimension along a depth axis, where different levels are plotted with different colors.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 The class is used by initializing a FacetGrid object with a dataframe and the names of the variables that will form the row, column, or hue dimensions of the grid. These variables should be categorical or discrete, and then the data at each level of the variable will be used for a facet along that axis. For example, say we wanted to examine differences between lunch and dinner in the tips dataset.
 
 \end{frame}
@@ -49,6 +65,11 @@ The main approach for visualizing data on this grid is with the FacetGrid.map() 
 g = sns.FacetGrid(tips, col="time")
 g.map(plt.hist, "tip");
 ../_images/axis_grids_10_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 This function will draw the figure and annotate the axes, hopefully producing a finished plot in one step. To make a relational plot, just pass multiple variable names. You can also provide keyword arguments, which will be passed to the plotting function:
 
 g = sns.FacetGrid(tips, col="sex", hue="smoker")
@@ -67,7 +88,11 @@ g = sns.FacetGrid(tips, row="smoker", col="time", margin_titles=True)
 g.map(sns.regplot, "size", "total_bill", color=".3", fit_reg=False, x_jitter=.1);
 ../_images/axis_grids_14_0.png
 Note that margin_titles isn’t formally supported by the matplotlib API, and may not work well in all cases. In particular, it currently can’t be used with a legend that lies outside of the plot.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 The size of the figure is set by providing the height of each facet, along with the aspect ratio:
 
 g = sns.FacetGrid(tips, col="day", size=4, aspect=.5)
@@ -87,6 +112,11 @@ g = sns.FacetGrid(titanic, col="class", sharex=False,
                   gridspec_kws={"width_ratios": [5, 3, 3]})
 g.map(sns.boxplot, "deck", "age");
 ../_images/axis_grids_18_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 The default ordering of the facets is derived from the information in the DataFrame. If the variable used to define facets has a categorical type, then the order of the categories is used. Otherwise, the facets will be in the order of appearence of the category levels. It is possible, however, to specify an ordering of any facet dimension with the appropriate *_order parameter:
 
 ordered_days = tips.day.value_counts().index
@@ -115,11 +145,20 @@ g.add_legend();
 \large
 
 You can also let other aspects of the plot vary across levels of the hue variable, which can be helpful for making plots that will be more comprehensible when printed in black-and-white. To do this, pass a dictionary to hue_kws where keys are the names of plotting function keyword arguments and values are lists of keyword values, one for each level of the hue variable.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 g = sns.FacetGrid(tips, hue="sex", palette="Set1", size=5, hue_kws={"marker": ["^", "v"]})
 g.map(plt.scatter, "total_bill", "tip", s=100, linewidth=.5, edgecolor="white")
 g.add_legend();
 ../_images/axis_grids_24_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 If you have many levels of one variable, you can plot it along the columns but “wrap” them so that they span multiple rows. When doing this, you cannot use a row variable.
 
 attend = sns.load_dataset("attention").query("subject <= 12")
@@ -134,7 +173,11 @@ g.map(sns.pointplot, "solutions", "score", color=".3", ci=None);
 \large
 
 Once you’ve drawn a plot using FacetGrid.map() (which can be called multiple times), you may want to adjust some aspects of the plot. There are also a number of methods on the FacetGrid object for manipulating the figure at a higher level of abstraction. The most general is FacetGrid.set(), and there are other more specialized methods like FacetGrid.set_axis_labels(), which respects the fact that interior facets do not have axis labels. For example:
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 with sns.axes_style("white"):
     g = sns.FacetGrid(tips, row="sex", col="smoker", margin_titles=True, size=2.5)
 g.map(plt.scatter, "total_bill", "tip", color="#334488", edgecolor="white", lw=.5);
@@ -151,11 +194,18 @@ g.fig.subplots_adjust(wspace=.02, hspace=.02);
 
 For even more customization, you can work directly with the underling matplotlib Figure and Axes objects, which are stored as member attributes at fig and axes (a two-dimensional array), respectively. When making a figure without row or column faceting, you can also use the ax attribute to directly access the single axes.
 
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
+\begin{verbatim}
 g = sns.FacetGrid(tips, col="smoker", margin_titles=True, size=4)
 g.map(plt.scatter, "total_bill", "tip", color="#338844", edgecolor="white", s=50, lw=1)
 for ax in g.axes.flat:
     ax.plot((0, 50), (0, .2 * 50), c=".2", ls="--")
 g.set(xlim=(0, 60), ylim=(0, 14));
+\end{verbatim}
 ../_images/axis_grids_30_0.png
 
 \end{frame}
@@ -169,6 +219,11 @@ You’re not limited to existing matplotlib and seaborn functions when using Fac
 
 It must plot onto the “currently active” matplotlib Axes. This will be true of functions in the matplotlib.pyplot namespace, and you can call plt.gca to get a reference to the current Axes if you want to work directly with its methods.
 It must accept the data that it plots in positional arguments. Internally, FacetGrid will pass a Series of data for each of the named positional arguments passed to FacetGrid.map().
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 It must be able to accept color and label keyword arguments, and, ideally, it will do something useful with them. In most cases, it’s easiest to catch a generic dictionary of **kwargs and pass it along to the underlying plotting function.
 Let’s look at minimal example of a function you can plot with. This function will just take a single vector of data for each facet:
 
@@ -195,6 +250,11 @@ def qqplot(x, y, **kwargs):
 g = sns.FacetGrid(tips, col="smoker", size=4)
 g.map(qqplot, "total_bill", "tip");
 ../_images/axis_grids_34_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 Because plt.scatter accepts color and label keyword arguments and does the right thing with them, we can add a hue facet without any difficulty:
 
 g = sns.FacetGrid(tips, hue="time", col="sex", size=4)
@@ -208,6 +268,11 @@ g = sns.FacetGrid(tips, hue="time", col="sex", size=4,
 g.map(qqplot, "total_bill", "tip", s=40, edgecolor="w")
 g.add_legend();
 ../_images/axis_grids_38_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 Sometimes, though, you’ll want to map a function that doesn’t work the way you expect with the color and label keyword arguments. In this case, you’ll want to explictly catch them and handle them in the logic of your custom function. For example, this approach will allow use to map plt.hexbin, which otherwise does not play well with the FacetGrid API:
 
 def hexbin(x, y, color, **kwargs):
@@ -218,6 +283,11 @@ with sns.axes_style("dark"):
     g = sns.FacetGrid(tips, hue="time", col="time", size=4)
 g.map(hexbin, "total_bill", "tip", extent=[0, 50, 0, 10]);
 ../_images/axis_grids_40_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 Plotting pairwise relationships with PairGrid and pairplot()
 PairGrid also allows you to quickly draw a grid of small subplots using the same plot type to visualize data in each. In a PairGrid, each row and column is assigned to a different variable, so the resulting plot shows each pairwise relationship in the dataset. This style of plot is sometimes called a “scatterplot matrix”, as this is the most common way to show each relationship, but PairGrid is not limited to scatterplots.
 \end{frame}
@@ -229,18 +299,31 @@ PairGrid also allows you to quickly draw a grid of small subplots using the same
 It’s important to understand the differences between a FacetGrid and a PairGrid. In the former, each facet shows the same relationship conditioned on different levels of other variables. In the latter, each plot shows a different relationship (although the upper and lower triangles will have mirrored plots). Using PairGrid can give you a very quick, very high-level summary of interesting relationships in your dataset.
 
 The basic usage of the class is very similar to FacetGrid. First you initialize the grid, then you pass plotting function to a map method and it will be called on each subplot. There is also a companion function, pairplot() that trades off some flexibility for faster plotting.
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 iris = sns.load_dataset("iris")
 g = sns.PairGrid(iris)
 g.map(plt.scatter);
 ../_images/axis_grids_42_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\large
 It’s possible to plot a different function on the diagonal to show the univariate distribution of the variable in each column. Note that the axis ticks won’t correspond to the count or density axis of this plot, though.
 
 g = sns.PairGrid(iris)
 g.map_diag(plt.hist)
 g.map_offdiag(plt.scatter);
 ../_images/axis_grids_44_0.png
-A very common way to use this plot colors the observations by a separate categorical variable. For example, the iris dataset has four measurements for each of three different species of iris flowers so you can see how they differ.
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\frametitle{Seaborn Workshop}
+\largeA very common way to use this plot colors the observations by a separate categorical variable. For example, the iris dataset has four measurements for each of three different species of iris flowers so you can see how they differ.
 
 g = sns.PairGrid(iris, hue="species")
 g.map_diag(plt.hist)
