--- a/01-Installing and getting started.tex
+++ b/01-Installing and getting started.tex
@@ -1,21 +1,37 @@
+\documentclass{beamer}
 
+\usepackage{framed}
+\usepackage{graphicx}
+
+\begin{document}
 %====================================%
-\begin{frame}
+\begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-Installing and getting started
+\textbf{Installing and getting started}
 To install the released version of seaborn, you can use pip (i.e. pip install seaborn). It’s also possible to install the released version using conda (i.e. conda install seaborn), although this may lag behind the version availible from PyPI.
 
-Alternatively, you can use pip to install the development version, with the command pip install git+git://github.com/mwaskom/seaborn.git#egg=seaborn. Another option would be to to clone the github repository and install with pip install . from the source directory. Seaborn itself is pure Python, so installation should be reasonably straightforward.
+Alternatively, you can use pip to install the development version, with the command pip install
+\begin{verbatim}
+git+git://github.com/mwaskom/seaborn.git#egg=seaborn.
+\end{verbatim}  
+\end{frame}
+%====================================%
+\begin{frame}
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{itemize}
+\item Another option would be to to clone the github repository and install with \texttt{pip install }. from the source directory. \item Seaborn itself is pure Python, so installation should be reasonably straightforward.
 
-When using the development version, you may want to refer to the development docs. Note that these are not built automatically and may at times fall out of sync with the actual master branch on github.
+\item When using the development version, you may want to refer to the development docs. Note that these are not built automatically and may at times fall out of sync with the actual master branch on github.
+\end{itemize}
+
 \end{frame}
 %====================================%
 \begin{frame}
 \frametitle{Seaborn Workshop}
 \large
-
-Dependencies¶
+\noindent \textbf{Dependencies}
 Python 2.7 or 3.3+
 Mandatory dependencies
 numpy
@@ -32,9 +48,9 @@ statsmodels
 
 The pip installation script will attempt to download the mandatory dependencies if they do not exist at install-time.
 
-I recommend using seaborn with the Anaconda distribution, as this makes it easy to manage the main dependencies, which otherwise can be difficult to install.
+Using seaborn with the Anaconda distribution is recommended, as this makes it easy to manage the main dependencies, which otherwise can be difficult to install.
 
-I attempt to keep seaborn importable and generally functional on the versions available through the stable Debian channels. There may be cases where some more advanced features only work with newer versions of these dependencies, although these should be relatively rare.
+%I attempt to keep seaborn importable and generally functional on the versions available through the stable Debian channels. There may be cases where some more advanced features only work with newer versions of these dependencies, although these should be relatively rare.
 
 There are also some known bugs on older versions of matplotlib, so you should in general try to use a modern version. For many use cases, though, older matplotlibs will work fine.
 
@@ -45,10 +61,15 @@ Seaborn is tested on the most recent versions offered through conda.
 \frametitle{Seaborn Workshop}
 \large
 
-Importing seaborn
-Seaborn will apply its default style parameters to the global matplotlib style dictionary when you import it. This will change the look of all plots, including those created by using matplotlib functions directly. To avoid this behavior and use the default matplotlib aesthetics (along with any customization in your matplotlibrc), you can import the seaborn.apionly namespace.
-
-Seaborn has several other pre-packaged styles along with high-level tools for managing them, so you should not limit yourself to the default aesthetics.
+\noindent \textbf{Importing seaborn}
+\begin{itemize}
+\item	Seaborn will apply its default style parameters to the global matplotlib style dictionary when you import it. This will change the look of all plots, including those created by using matplotlib functions directly. 
+\item To avoid this behavior and use the default matplotlib aesthetics (along with any customization in your matplotlibrc), you can import the \texttt{seaborn.apionly} namespace.
+	
+\item Seaborn has several other pre-packaged styles along with high-level tools for managing them, so you should not limit yourself to the default aesthetics.
+	
+\end{itemize}
 
 By convention, seaborn is abbreviated to sns on import.
 \end{frame}
+\end{document}
