--- a/01-Installing and getting started.tex
+++ b/01-Installing and getting started.tex
@@ -45,16 +45,18 @@ statsmodels
 \begin{frame}
 \frametitle{Seaborn Workshop}
 \large
-
-The pip installation script will attempt to download the mandatory dependencies if they do not exist at install-time.
-
-Using seaborn with the Anaconda distribution is recommended, as this makes it easy to manage the main dependencies, which otherwise can be difficult to install.
-
-%I attempt to keep seaborn importable and generally functional on the versions available through the stable Debian channels. There may be cases where some more advanced features only work with newer versions of these dependencies, although these should be relatively rare.
-
-There are also some known bugs on older versions of matplotlib, so you should in general try to use a modern version. For many use cases, though, older matplotlibs will work fine.
-
-Seaborn is tested on the most recent versions offered through conda.
+\begin{itemize}
+\item The pip installation script will attempt to download the mandatory dependencies if they do not exist at install-time.
+	
+\item Using seaborn with the Anaconda distribution is recommended, as this makes it easy to manage the main dependencies, which otherwise can be difficult to install.
+	
+	%I attempt to keep seaborn importable and generally functional on the versions available through the stable Debian channels. There may be cases where some more advanced features only work with newer versions of these dependencies, although these should be relatively rare.
+	
+\item There are also some known bugs on older versions of matplotlib, so you should in general try to use a modern version. For many use cases, though, older matplotlibs will work fine.
+	
+\item Seaborn is tested on the most recent versions offered through conda.
+	
+\end{itemize}
 \end{frame}
 %====================================%
 \begin{frame}
