--- a/04-Visualizing the distribution of a dataset.tex
+++ b/04-Visualizing the distribution of a dataset.tex
@@ -1,7 +1,11 @@
-
+\begin{document}
+%===========================================================%
+\begin{frame}
 Search
 Visualizing the distribution of a dataset
 When dealing with a set of data, often the first thing you’ll want to do is get a sense for how the variables are distributed. This chapter of the tutorial will give a brief introduction to some of the tools in seborn for examining univariate and bivariate distributions. You may also want to look at the categorical plots chapter for examples of functions that make it easy to compare the distribution of a variable across levels of other variables.
+\end{frame}
+%=============================================================%
 \begin{frame}[fragile]
 \begin{framed}
 \begin{verbatim}
@@ -26,16 +30,25 @@ sns.distplot(x);
 ../_images/distributions_8_0.png
 Histograms
 Histograms are likely familiar, and a hist function already exists in matplotlib. A histogram represents the distribution of data by forming bins along the range of the data and then drawing bars to show the number of observations that fall in each bin.
-
+\end{frame}
+%===========================================================%
+\begin{frame}
 To illustrate this, let’s remove the density curve and add a rug plot, which draws a small vertical tick at each observation. You can make the rug plot itself with the rugplot() function, but it is also available in distplot():
 
 sns.distplot(x, kde=False, rug=True);
 ../_images/distributions_10_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 When drawing histograms, the main choice you have is the number of bins to use and where to place them. distplot() uses a simple rule to make a good guess for what the right number is by default, but trying more or fewer bins might reveal other features in the data:
 
 sns.distplot(x, bins=20, kde=False, rug=True);
 ../_images/distributions_12_0.png
-Kernel density estimaton
+\end{frame}
+%=============================================================%
+\section{Kernel density estimaton}
+\begin{frame}[fragile]
+	
 The kernel density estimate may be less familiar, but it can be a useful tool for plotting the shape of a distribution. Like the histogram, the KDE plots encodes the density of observations on one axis with height along the other axis:
 
 sns.distplot(x, hist=False, rug=True);
@@ -72,10 +85,15 @@ density = np.sum(kernels, axis=0)
 density /= integrate.trapz(density, support)
 plt.plot(support, density);
 ../_images/distributions_18_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 We can see that if we use the kdeplot() function in seaborn, we get the same curve. This function is used by distplot(), but it provides a more direct interface with easier access to other options when you just want the density estimate:
 
 sns.kdeplot(x, shade=True);
 ../_images/distributions_20_0.png
+\end{frame}
+\begin{frame}
 The bandwidth (bw) parameter of the KDE controls how tightly the estimation is fit to the data, much like the bin size in a histogram. It corresponds to the width of the kernels we plotted above. The default behavior tries to guess a good value using a common reference rule, but it may be helpful to try larger or smaller values:
 
 sns.kdeplot(x)
@@ -83,6 +101,9 @@ sns.kdeplot(x, bw=.2, label="bw: 0.2")
 sns.kdeplot(x, bw=2, label="bw: 2")
 plt.legend();
 ../_images/distributions_22_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 As you can see above, the nature of the Gaussian KDE process means that estimation extends past the largest and smallest values in the dataset. It’s possible to control how far past the extreme values the curve is drawn with the cut parameter; however, this only influences how the curve is drawn and not how it is fit:
 
 sns.kdeplot(x, shade=True, cut=0)
@@ -114,6 +135,9 @@ The most familiar way to visualize a bivariate distribution is a scatterplot, wh
 
 sns.jointplot(x="x", y="y", data=df);
 ../_images/distributions_30_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 Hexbin plots
 The bivariate analogue of a histogram is known as a “hexbin” plot, because it shows the counts of observations that fall within hexagonal bins. This plot works best with relatively large datasets. It’s availible through the matplotlib plt.hexbin function and as a style in jointplot(). It looks best with a white background:
 
@@ -121,18 +145,28 @@ x, y = np.random.multivariate_normal(mean, cov, 1000).T
 with sns.axes_style("white"):
     sns.jointplot(x=x, y=y, kind="hex", color="k");
 ../_images/distributions_32_0.png
-Kernel density estimation
+\end{frame}
+%===========================================================%
+\begin{frame}
+\frametitle{Kernel density estimation}
 It is also posible to use the kernel density estimation procedure described above to visualize a bivariate distribution. In seaborn, this kind of plot is shown with a contour plot and is available as a style in jointplot():
 
 sns.jointplot(x="x", y="y", data=df, kind="kde");
 ../_images/distributions_34_0.png
 You can also draw a two-dimensional kernel density plot with the kdeplot() function. This allows you to draw this kind of plot onto a specific (and possibly already existing) matplotlib axes, whereas the jointplot() function manages its own figure:
-
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\begin{verbatim}
 f, ax = plt.subplots(figsize=(6, 6))
 sns.kdeplot(df.x, df.y, ax=ax)
 sns.rugplot(df.x, color="g", ax=ax)
 sns.rugplot(df.y, vertical=True, ax=ax);
+\end{verbatim}
 ../_images/distributions_36_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 If you wish to show the bivariate density more continuously, you can simply increase the number of contour levels:
 
 f, ax = plt.subplots(figsize=(6, 6))
@@ -140,22 +174,32 @@ cmap = sns.cubehelix_palette(as_cmap=True, dark=0, light=1, reverse=True)
 sns.kdeplot(df.x, df.y, cmap=cmap, n_levels=60, shade=True);
 ../_images/distributions_38_0.png
 
-%==========================================%
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
 The jointplot() function uses a JointGrid to manage the figure. For more flexibility, you may want to draw your figure by using JointGrid directly. jointplot() returns the JointGrid object after plotting, which you can use to add more layers or to tweak other aspects of the visualization:
-
+\begin{verbatim}
 g = sns.jointplot(x="x", y="y", data=df, kind="kde", color="m")
 g.plot_joint(plt.scatter, c="w", s=30, linewidth=1, marker="+")
 g.ax_joint.collections[0].set_alpha(0)
 g.set_axis_labels("$X$", "$Y$");
+\end{verbatim}
 ../_images/distributions_40_0.png
-%=======================================================================%
-Visualizing pairwise relationships in a dataset
-To plot multiple pairwise bivariate distributions in a dataset, you can use the pairplot() function. This creates a matrix of axes and shows the relationship for each pair of columns in a DataFrame. by default, it also draws the univariate distribution of each variable on the diagonal Axes:
 
+\end{frame}
+\section{Visualizing pairwise relationships in a dataset}
+%===========================================================%
+\begin{frame}
+To plot multiple pairwise bivariate distributions in a dataset, you can use the \texttt{pairplot()} function. This creates a matrix of axes and shows the relationship for each pair of columns in a DataFrame. by default, it also draws the univariate distribution of each variable on the diagonal Axes:
+\begin{verbatim}
 iris = sns.load_dataset("iris")
 sns.pairplot(iris);
-../_images/distributions_42_0.png
+\end{verbatim}
 
+../_images/distributions_42_0.png
+\end{frame}
+%===========================================================%
+\begin{frame}
 Much like the relationship between jointplot() and JointGrid, the pairplot() function is built on top of a PairGrid object, which can be used directly for more flexibility:
 
 g = sns.PairGrid(iris)
@@ -164,4 +208,5 @@ g.map_offdiag(sns.kdeplot, cmap="Blues_d", n_levels=6);
 /Users/mwaskom/anaconda/lib/python2.7/site-packages/matplotlib/axes/_axes.py:475: UserWarning: No labelled objects found. Use label='...' kwarg on individual plots.
   warnings.warn("No labelled objects found. "
 ../_images/distributions_44_1.png
+
 \end{document}
